<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iSpent</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_entry">Add Entry</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="action_total">Total</string>
    <string name="button_add_entry">Add Entry</string>
    <string name="payment">I spent </string>
    <string name="hint_payment">$00.00</string>
    <string name="payee">At </string>
    <string name="hint_payee">some store/bill</string>
    <string name="date">On </string>
    <string name="hint_date"></string>
    <string name="button_create">Create Entry</string>
    <string name="title_activity_create_entry">Create Entry</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_calendar">Calendar View</string>
    
    <string name="calendar_prev_month">Prev</string>
    <string name="calendar_next_month">Next</string>
    <!--<string name=""></string>-->
    
    <string name="back">&lt;&#8211;</string>

</resources>
