<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.himanishkaushal.spent.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item 
        android:id="@+id/action_total"
        android:orderInCategory="1"
        android:title="@string/action_total"
        app:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/action_add_entry" 
        android:orderInCategory="2" 
        android:title="@string/action_add_entry"
        app:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/action_delete_all_entries"
        android:title="@string/action_delete_all_entries"
        app:showAsAction="never" />
    
    <item 
        android:id="@+id/action_calendar"
        android:title="@string/action_calendar"
        app:showAsAction="never" />

</menu>
