<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.himanishkaushal.spent.MainActivity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/payment"
            android:textSize="20sp" />
            
        
        <EditText 
            android:id="@+id/input_payment" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_payment"
            android:inputType="numberDecimal" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/payee" 
            android:textSize="20sp" />
        
        <EditText 
            android:id="@+id/input_payee" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_payee" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/date" 
            android:textSize="20sp" />
        
        <Button 
            android:id="@+id/button_input_date" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDatePicker" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        android:onClick="checkInput" />
    
</LinearLayout>
