<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.himanishkaushal.spent.CalendarActivity" 
	android:orientation="vertical"
	android:textColor="@color/white" 
	>
	
    <!-- 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->
    
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="vertical"
	    android:background="@color/play_store_green"
	    >
	    
        <LinearLayout
			android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal"
	        style="?android:attr/buttonBarStyle" 
	        android:layout_gravity="left"
	        >
            
           <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/back"
	            style="?android:attr/buttonBarButtonStyle"
				android:textColor="@color/white"
           />
           
           <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:paddingLeft="10dp"
               android:text="Calendar"
               android:textColor="@color/white"
               android:textSize="20sp"
            />
        </LinearLayout>
	    
        

		<LinearLayout
			android:id="@+id/buttonlayout"
			android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal"
	        style="?android:attr/buttonBarStyle" 
	        >
		
			<Button
				android:id="@+id/prevMonth"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/calendar_prev_month"
				style="?android:attr/buttonBarButtonStyle"
				android:textColor="@color/white"
			/>
			
			<Button
				android:id="@+id/currentMonth"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:textColor="@color/white"
			/>
			
			<Button
				android:id="@+id/nextMonth"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/calendar_next_month" 
				style="?android:attr/buttonBarButtonStyle"
				android:textColor="@color/white"
			/>
		
		</LinearLayout>
	
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:animateLayoutChanges="true"
		    >

			<GridView
			    android:id="@+id/calendar"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentTop="true"
			    android:numColumns="7"
			    android:paddingBottom="@dimen/activity_vertical_margin"
			    android:paddingLeft="@dimen/activity_horizontal_margin"
			    android:paddingRight="@dimen/activity_horizontal_margin"
			    android:paddingTop="@dimen/activity_vertical_margin"
			    android:stretchMode="columnWidth" >
			</GridView>

		</RelativeLayout>
	</LinearLayout>
	
	<Button
		android:id="@+id/selectedDayMonthYear"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center" 
		android:textAppearance="?android:attr/textAppearanceMedium"
		/>
	
</LinearLayout>
